--- a/Caronte Responsive/css/estilos.css
+++ b/Caronte Responsive/css/estilos.css
@@ -16,7 +16,7 @@ a {
     text-decoration: none;
  }
 @media screen and (min-width: 0px) {
-    
+
     header a {
         text-decoration: none;
         color: black;
@@ -34,15 +34,18 @@ a {
         padding: 10px;
         background-color: ghostwhite;
         display: flex;
+        flex-flow: row nowrap;
         justify-content: flex-end;
-        
+
     }
     header nav#sociales a {
         padding-right: 10px;
         padding: 5px;
         border: 2px solid black;
         border-radius: 5px;
-        margin: 5px;
+        margin-right: 5px;
+        text-align: center;
+        width: 40px;
         text-align: center;
     }
     header nav#sociales a i {
@@ -50,6 +53,12 @@ a {
         height: 10px;
         padding: 3px;
         font-size: 20px;
+    }
+    header nav#sociales a:hover{
+        transition: all 1s;
+        background-color: grey;
+        font-size: 25px;
+        transform: scale(1.3);
     }
     header nav#contacto {
         display: none;
@@ -109,7 +118,8 @@ a {
         color: black;
     }
     section {
-
+        /* display: flex;
+        flex-flow: row wrap; */
     }
     main section article {
         display: flex;
@@ -118,30 +128,298 @@ a {
 
     }
     main section article figure {
-        height: 100%;
+        height: 100px;
+
     }
     main section article figure img {
-        height: 100px;
-    }    
+        height: 100%;
+
+    }
+    main section article figure div {
+
+    }
     main section article figure span {
-        width: 50%;
+
     }
     main section article figure h3 {
-        width: 50%;
+
     }
 }
 
 @media screen and (min-width: 650px) {
-    
+
     header {
-        background-color: blue;
+        display: flex;
+        flex-flow: wrap nowrap;
+        background-color: black
     }
+    header nav#contacto {
+        display: flex;
+        /* flex-flow: row nowrap; */
+        width: 100%;
+        order: 1;
+        background-color: ghostwhite;
+        padding: 10px;
+
+    }
+    header #contacto a {
+        display: flex;
+        flex-flow: row nowrap;
+        font-size: 20px;
+    }
+    header #contacto a i {
+        order: 1;
+    }
+    header #contacto a span {
+        order: 2;
+    }
+    header nav#sociales {
+        width: 100%;
+        order: 2;
+       
+    }
+    header nav#sociales a {
+        border: 0px solid black !important;
+        border-radius: 0px !important;
+    }
+    header figure {
+        order: 3;
+        width: 40%;
+    }
+    header h1 {
+        order: 4;
+        width: 60%;
+    }
+    header button {
+        display: none;
+    }
+    header nav#ppal {
+        order: 5;
+        display: flex;
+        flex-flow: row nowrap;
+        
+
+    }
+    header #ppal a {
+        border: 0px solid white;
+    }
+    header #ppal a span {
+        font-size: 25px;
+        color: white;
+    }
+    header #ppal a i{
+        display: flex;
+        font-size: 40px;
+        color: green;
+        padding: 5px;
+    }
+
 }
 
 @media screen and (min-width: 900px) {
 
     header {
-        background-color: brown;
+        background-color: black;
+        height: 250px;
+        display: flex;
+        flex-flow: row wrap;
     }
     
+    header #contacto {
+        background-color: white;
+        height: 20%;
+        width: 80%;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    header #contacto a {
+        font-size: 17px;
+        text-decoration: none;
+        padding: 5px;
+        color: black;
+        
+    }
+    
+    header #contacto a:nth-child(1) {
+        margin-left: 5px;
+    }
+    
+    header #sociales {
+        background-color: white;
+        height: 20%;
+        width: 20%;
+        display: flex;
+        flex-flow: nowrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    header #sociales a {
+        font-size: 25px;
+    }
+    
+    header figure {
+        height: 70%;
+        width: 20%;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    
+    header figure img {
+        height: 65%;
+        
+    }
+    
+    header figure h2 {
+        color: white;
+    }
+    
+    header #ppal {
+        width: 100%;
+        color: white;
+        background-color: black;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around;
+        align-items: center;
+        
+    }
+    
+    header #ppal a {
+        text-decoration: none;
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+    
+    
+    header #ppal a i {
+        font-size: 40px;
+        color: green;
+        padding: 5px;
+    
+    }
+    
+    header #ppal a:hover i {
+        color: white;
+        order: 2;
+        transition: 1s;
+        
+    }
+    
+    header #ppal a span {
+        font-size: 20px;
+        font-family: Oswald;
+        color: white;
+    }
+    
+    header #ppal a:hover span {
+        color: green;
+        order: 1;
+        transition: 1s;
+        
+    }
+    
+    main{
+        height: 500px;
+    }
+    
+    main #trabajo {
+        height: 50px;
+        background-color: orange;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+    }
+    
+    main #trabajo h1 {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 20%;
+        text-align: center;
+        font-size: 30px;
+        font-family: Oswald;
+    }
+    
+    main #trabajo nav {
+        width: 30%;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+       
+    }
+    
+    main #trabajo nav a {
+        text-decoration: none;
+        padding: 5px;
+    }
+    
+    main #trabajo nav a:nth-child(5) {
+        color: black;
+        font-style: oblique;
+        font-size: 18px;
+    }
+    
+    
+    
+    main section {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        gap: 20px;
+        padding: 10px;
+    
+    }
+    
+    main section article {
+        width: 32%;
+        border: 2px solid black;
+        border-radius: 5px;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    
+    main section article figure {
+        height: 100px;
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        
+    }
+    
+    main section article figure img {
+        height: 100%;
+        width: 25%;
+        padding: 5px;
+        display: flex;
+        justify-content: space-between;
+    
+    }
+    
+    main section article span {
+        width: 90%;
+        color: blue;
+        font-size: 20px;
+        
+    }
+    
+    main section article h3 {
+        font-style: italic;
+        font-size: 15px;
+        padding: 5px;
+        font-family: lato;
+    }
+
 }
